--- a/phpstan.neon
+++ b/phpstan.neon
@@ -1,2 +1,5 @@
 parameters:
-    ignoreErrors: []
+    ignoreErrors:
+        -
+            message: '/type has no value type specified in iterable type array/'
+            path: %currentWorkingDirectory%/src/ParserErrorException.php
