--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,12 @@
     "name": "chubbyphp/chubbyphp-parsing",
     "description": "Allows parsing data of various structures, meaning the population and validation of data into a defined structure. For example, converting an API request into a Data Transfer Object (DTO).",
     "keywords": [
-        "chubbyphp"
+        "chubbyphp",
+        "dto",
+        "parsing",
+        "population",
+        "validation",
+        "zod"
     ],
     "license": "MIT",
     "authors": [
