--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,11 @@
         "php-coveralls/php-coveralls": "^2.7.0",
         "phpstan/extension-installer": "^1.3.1",
         "phpstan/phpstan": "^1.10.45",
-        "phpunit/phpunit": "^10.4.2"
+        "phpunit/phpunit": "^10.4.2",
+        "respect/validation": "^2.3"
+    },
+    "conflict": {
+        "respect/validation": "<2.3|| >=3.0"
     },
     "autoload": {
         "psr-4": {
@@ -47,7 +51,7 @@
     },
     "extra": {
         "branch-alias": {
-            "dev-master": "1.0-dev"
+            "dev-master": "1.1-dev"
         }
     },
     "scripts": {
