--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,9 @@
         "php-coveralls/php-coveralls": "^2.7.0",
         "phpstan/extension-installer": "^1.3.1",
         "phpstan/phpstan": "^1.10.45",
-        "phpunit/phpunit": "^10.4.2",
+        "phpunit/phpunit": "^10.4.2"
+    },
+    "Suggests": {
         "respect/validation": "^2.3"
     },
     "conflict": {
